--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -1,5 +1,57 @@
-about:
+hero:
   fullname: Anton Bojko
   position: Web developer
+
+about:
   title: About Me
   summary: Frontend developer with experience in creating web applications. I am proficient in various development tools and methodologies. I pay attention to design and optimization of projects, striving for perfect layouts and clean code. In my free time I study new technologies, read books and articles to expand my knowledge and skills.
+  links:
+    - href: mailto:mrtoxas@gmail.com
+      text: mrtoxas@gmail.com
+      title: Email
+      icon: i-bxl-gmail
+    - href: tg://resolve?domain=mrtoxas/
+      text: t.me/mrtoxas
+      title: Telegram
+      icon: i-bxl-telegram
+    - href: https://github.com/mrtoxas
+      text: github.com/mrtoxas
+      title: GitHub
+      icon: i-bxl-github
+    - href: https://ua.linkedin.com/in/mrtoxas
+      text: linkedin.com/in/mrtoxas
+      title: LinkedIn
+      icon: i-bxl-linkedin-square
+
+contacts:
+  ariaLabel: Contacts section
+  links:
+    - href: mailto:mrtoxas@gmail.com
+      text: mrtoxas@gmail.com
+      title: Email
+      icon: i-bxl-gmail
+    - href: tg://resolve?domain=mrtoxas/
+      text: t.me/mrtoxas
+      title: Telegram
+      icon: i-bxl-telegram
+    - href: https://github.com/mrtoxas
+      text: github.com/mrtoxas
+      title: GitHub
+      icon: i-bxl-github
+    - href: https://ua.linkedin.com/in/mrtoxas
+      text: linkedin.com/in/mrtoxas
+      title: LinkedIn
+      icon: i-bxl-linkedin  
+      
+skills: 
+  title: Technical skills
+  list:
+    - title: 'Key Skills:'
+      list: [
+        HTML, CSS, CSS/HTML preprocessors, 
+        JavaScript, TypeScript, jQuery, React,
+        Vitepress, Astro, Vite, Webpack, Parcel, Gulp,
+        Tailwind, UnoCSS, CSS Frameworks, ...
+      ]
+    - title: 'Familiar with:'
+      list: [Node.js, Next.js, Vue, LitElement, Prisma ORM, Python, PHP, Laravel, Docker, Wordpress, Figma, ...]  
