--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -1,5 +1,40 @@
-about:
+hero:
   fullname: Антон Бойко
   position: Веб-разработчик
+
+about:
   title: Обо мне
   summary: Фронтенд-разработчик с опытом создания веб-приложений. Владею различными инструментами и методиками разработки. Я уделяю внимание проектированию и оптимизации проектов, стремясь к идеальным макетам и чистому коду. В свободное время я изучаю новые технологии, читаю книги и статьи, чтобы расширить свои знания и навыки.
+
+contacts:
+  ariaLabel: Contacts section
+  links:
+    - href: mailto:mrtoxas@gmail.com
+      text: mrtoxas@gmail.com
+      title: Email
+      icon: i-bxl-gmail
+    - href: tg://resolve?domain=mrtoxas/
+      text: t.me/mrtoxas
+      title: Telegram
+      icon: i-bxl-telegram
+    - href: https://github.com/mrtoxas
+      text: github.com/mrtoxas
+      title: GitHub
+      icon: i-bxl-github
+    - href: https://ua.linkedin.com/in/mrtoxas
+      text: linkedin.com/in/mrtoxas
+      title: LinkedIn
+      icon: i-bxl-linkedin-square 
+
+skills: 
+  title: Технические навыки
+  list:
+    - title: 'Основные навыки:'
+      list: [
+        HTML, CSS, CSS/HTML preprocessors, 
+        JavaScript, TypeScript, jQuery, React,
+        Vitepress, Astro, Vite, Webpack, Parcel, Gulp,
+        Tailwind, UnoCSS, CSS Frameworks, ...
+      ]
+    - title: 'Знаком с:'
+      list: [Node.js, Next.js, Vue, LitElement, Prisma ORM, Python, PHP, Laravel, Docker, Wordpress, Figma, ...]
