--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -38,3 +38,55 @@ skills:
       ]
     - title: 'Знаком с:'
       list: [Node.js, Next.js, Vue, LitElement, Prisma ORM, Python, PHP, Laravel, Docker, Wordpress, Figma, ...]
+
+education:
+  title: Образование
+  list:
+    - name: ЧЕРКАССКИЙ ГОСУДАРСТВЕННЫЙ ТЕХНОЛОГИЧЕСКИЙ УНИВЕРСИТЕТ
+      years: 2002-2004
+      degree: Магистр
+      additionals:
+        - Компьютерная инженерия, компьютерные системы и сети
+        - Курсы по web-программированию (JavaScript, Ruby on Rails, Python), участие в факультативных занятиях, предоставленных университетом во время обучения
+    - name: ЧЕРКАССКИЙ ГОСУДАРСТВЕННЫЙ БИЗНЕС-КОЛЛЕДЖ
+      years: 1998-2004
+      degree: Младший специалист
+      additionals:
+        - Обслуживание компьютерных и интеллектуальных систем и сетей
+        - В ходе учебной программы осуществлялось изучение языков программирования Assembler и Delphi
+
+works:
+  title: Опыт работы
+  list:
+    - position: ФРОНТЕНД-РАЗРАБОТЧИК — ФРИЛАНС
+      years: 2002-2004
+      additionals:
+        - Создание лендингов, корпоративных сайтов и других веб-решений для бизнеса в команде по разработке веб-проектов на фрилансе.
+        - Поддержка, дальнейшая разработка и решение задач в существующих проектах.
+      skills:
+        title: 'Используемые технологии:'
+        list: [HTML/CSS/JS, Gulp, SASS, WordPress, Python, Django]
+    - position: ФРОНТЕНД-РАЗРАБОТЧИК — DIGITAL–АГЕНТСТВО ONLY
+      years: 2002-2004
+      additionals:
+        - Участие в разработке интерпрайз проектов, учитывая бизнес-требования, для обесппечения их функциональности и эффективности.
+        - Поддержка и дальнейшая разработка легаси-проектов.
+        - Активное участие в совещаниях и обсуждениях требований к проектам. Сотрудничество с другими членами команды, включая дизайнеров, бэкенд-разработчиков и менеджеров проектов, для решения задач.
+        - Опыт ведения разработки и проектирования в качестве основного фронтенд-разработчика на нескольких проектах.
+      skills:
+        title: 'Используемые технологии:'
+        list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
+    - position: FRONTEND DEVELOPER — FREELANCE
+      years: 2002-2004
+      additionals:
+        - Working with regular clients. Development of full-stack solutions for small businesses.
+      skills:
+        title: 'Technologies used:'
+        list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]
+    
+aditional:
+  title: Социальная активность
+  text: С 2023 года активно участвовал в общении и обмене опытом с другими веб-разработчиками на одном из самых популярных интернет-форумов для программистов. Я регулярно решал различные задачи по веб-разработке, связанные с html, css, javascript и другими технологиями, а также консультировал и поддерживал как начинающих, так и опытных коллег по профессии. Кроме того, я выполнял функции модератора на этом форуме, следя за соблюдением правил, порядка и качества обсуждений.
+  link: 
+    name: Ссылка на профиль
+    href: https://www.cyberforum.ru/members/628162.html      
