--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -38,3 +38,55 @@ skills:
       ]
     - title: 'Знайом з:'
       list: [Node.js, Next.js, Vue, LitElement, Prisma ORM, Python, PHP, Laravel, Docker, Wordpress, Figma, ...]  
+
+education:
+  title: Професійна освіта
+  list:
+    - name: ЧЕРКАСЬКИЙ ДЕРЖАВНИЙ ТЕХНОЛОГІЧНИЙ УНІВЕРСИТЕТ
+      years: 2002-2004
+      degree: Магістр
+      additionals:
+        - Комп'ютерна інженерія, комп'ютерні системи та мережі
+        - Курси з web-програмування (JavaScript, Ruby on Rails, Python), участь у факультативних заняттях, наданих університетом під час навчання
+    - name: ЧЕРКАСЬКИЙ ДЕРЖАВНИЙ БІЗНЕС-КОЛЕДЖ
+      years: 1998-2004
+      degree: Молодший спеціаліст
+      additionals:
+        - Обслуговування комп'ютерних та інтелектуальних систем та мереж
+        - Під час навчальної програми здійснювалося вивчення мов програмування Assembler і Delphi
+
+works:
+  title: Досвід роботи
+  list:
+    - position: ФРОНТЕНД-РОЗРОБНИК — ФРІЛАНС
+      years: 2002-2004
+      additionals:
+        - Створення лендінгів, корпоративних сайтів та інших веб-рішень для бізнесу в команді з розробки веб-проєктів на фрілансі.
+        - Підтримка, подальше розроблення та вирішення завдань в існуючих проєктахs.
+      skills:
+        title: 'Використовувані технології:'
+        list: [HTML/CSS/JS, Gulp, SASS, WordPress, Python, Django]
+    - position: ФРОНТЕНД-РАЗРАБОТЧИК — DIGITAL–АГЕНТСТВО ONLY
+      years: 2002-2004
+      additionals:
+        - Участь у розробці інтерпрайз проєктів, враховуючи бізнес-вимоги, для забезпечення їх функціональності та ефективності.
+        - Підтримка та подальше розроблення легасі-проєктів.
+        - Активна участь у нарадах і обговореннях вимог до проєктів. Співпраця з іншими членами команди, включно з дизайнерами, бекенд-розробниками та менеджерами проєктів, для вирішення завдань.
+        - Досвід ведення розробки та проєктування як основного фронтенд-розробника на кількох проєктах.
+      skills:
+        title: 'Використовувані технології:'
+        list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
+    - position: ФРОНТЕНД-РОЗРОБНИК — ФРІЛАНС
+      years: 2002-2004
+      additionals:
+        - Робота з постійними клієнтами. Розробка full-stack рішень для малого бізнесу.
+      skills:
+        title: 'Використовувані технології:'
+        list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]
+    
+aditional:
+  title: Соціальна активність
+  text: З 2023 року брав активну участь у спілкуванні та обміні досвідом з іншими веб-розробниками на одному з найпопулярніших інтернет-форумів для програмістів. Я регулярно вирішував різні завдання з веб-розробки, пов'язані з html, css, javascript та іншими технологіями, а також консультував і підтримував як початківців, так і досвідчених колег за професією. Крім того, я виконував функції модератора на цьому форумі, стежачи за дотриманням правил, порядку і якості обговорень.
+  link: 
+    name: Посилання на профіль
+    href: https://www.cyberforum.ru/members/628162.html
