--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@iconify-json/bxl": "^1.1.10",
+    "@iconify-json/lucide": "^1.1.188",
     "@unocss/preset-icons": "^0.60.3",
     "@unocss/preset-wind": "^0.60.3",
     "@unocss/reset": "^0.60.3",
