--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@fontsource-variable/inter": "^5.0.18",
-    "astro": "^4.8.6",
+    "astro": "^4.9.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@iconify-json/bxl": "^1.1.10",
     "@iconify-json/lucide": "^1.1.188",
+    "@playform/compress": "^0.0.7",
     "@unocss/preset-icons": "^0.60.3",
     "@unocss/preset-wind": "^0.60.3",
     "@unocss/reset": "^0.60.3",
