--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -1,6 +1,6 @@
 hero:
   fullname: Антон Бойко
-  position: Веб-разработчик
+  position: Frontend-разработчик
 
 about:
   title: Обо мне
@@ -43,13 +43,13 @@ education:
   title: Образование
   list:
     - name: ЧЕРКАССКИЙ ГОСУДАРСТВЕННЫЙ ТЕХНОЛОГИЧЕСКИЙ УНИВЕРСИТЕТ
-      years: 2002-2004
+      years: 2014-2018
       degree: Магистр
       additionals:
         - Компьютерная инженерия, компьютерные системы и сети
         - Курсы по web-программированию (JavaScript, Ruby on Rails, Python), участие в факультативных занятиях, предоставленных университетом во время обучения
     - name: ЧЕРКАССКИЙ ГОСУДАРСТВЕННЫЙ БИЗНЕС-КОЛЛЕДЖ
-      years: 1998-2004
+      years: 1998-2002
       degree: Младший специалист
       additionals:
         - Обслуживание компьютерных и интеллектуальных систем и сетей
@@ -60,7 +60,7 @@ works:
   list:
     - name: ФРИЛАНС
       position: Фронтенд-разработчик
-      years: 2002-2004
+      years: 2023-2024
       additionals:
         - Создание лендингов, корпоративных сайтов и других веб-решений для бизнеса в команде по разработке веб-проектов на фрилансе.
         - Поддержка, дальнейшая разработка и решение задач в существующих проектах.
@@ -69,7 +69,7 @@ works:
         list: [HTML/CSS/JS, Gulp, SASS, WordPress, Python, Django]
     - name: DIGITAL–АГЕНТСТВО ONLY
       position: Фронтенд-разработчик
-      years: 2002-2004
+      years: 2020-2022
       additionals:
         - Участие в разработке интерпрайз проектов, учитывая бизнес-требования, для обесппечения их функциональности и эффективности.
         - Поддержка и дальнейшая разработка легаси-проектов.
@@ -80,7 +80,7 @@ works:
         list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
     - name: ФРИЛАНС
       position: Фронтенд-разработчик
-      years: 2002-2004
+      years: 2017-2020
       additionals:
         - Working with regular clients. Development of full-stack solutions for small businesses.
       skills:
@@ -92,4 +92,15 @@ additional:
   text: С 2023 года активно участвовал в общении и обмене опытом с другими веб-разработчиками на одном из самых популярных интернет-форумов для программистов. Я регулярно решал различные задачи по веб-разработке, связанные с html, css, javascript и другими технологиями, а также консультировал и поддерживал как начинающих, так и опытных коллег по профессии. Кроме того, я выполнял функции модератора на этом форуме, следя за соблюдением правил, порядка и качества обсуждений.
   link: 
     name: Ссылка на профиль
-    href: https://www.cyberforum.ru/members/628162.html      
+    href: https://www.cyberforum.ru/members/628162.html
+
+footer:
+  developer:
+    name: mrtoxas
+  license:    
+    name: CC BY-NC-ND
+    link: https://creativecommons.org/licenses/by-nc-nd/4.0/deed.en
+    author: Anton Bojko
+  link:
+    name: Show on GitHub
+    href: https://github.com/mrtoxas/cv    
