--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@unocss/preset-icons": "^0.60.3",
     "@unocss/preset-wind": "^0.60.3",
     "@unocss/reset": "^0.60.3",
+    "@unocss/transformer-variant-group": "^0.60.3",
     "unocss": "^0.60.3",
     "unocss-preset-theme": "^0.12.0"
   }
