fix content, fix styles, download btn

--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -89,7 +89,7 @@ works:
     
 additional:
   title: Social activity
-  text: Since 2023, I have been actively involved in communicating and sharing my experience with other web developers on one of the most popular online forums for programmers. I regularly solved various web development tasks related to html, css, javascript and other technologies, as well as advised and supported both beginners and experienced colleagues in the profession. I also served as a moderator on this forum, making sure that the rules, order and quality of discussions were maintained.
+  text: Since 2019, I have been actively participating in the professional web developer community on one of the popular online forums. I addressed issues related to web technologies and also served as a moderator, ensuring high-quality discussions and providing support for both newcomers and experienced developers.
   link: 
     name: Profile link
     href: https://www.cyberforum.ru/members/628162.html
