--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -89,7 +89,7 @@ works:
     
 additional:
   title: Социальная активность
-  text: С 2023 года активно участвовал в общении и обмене опытом с другими веб-разработчиками на одном из самых популярных интернет-форумов для программистов. Я регулярно решал различные задачи по веб-разработке, связанные с html, css, javascript и другими технологиями, а также консультировал и поддерживал как начинающих, так и опытных коллег по профессии. Кроме того, я выполнял функции модератора на этом форуме, следя за соблюдением правил, порядка и качества обсуждений.
+  text: С 2019 года активно участвовал в профессиональном сообществе веб-разработчиков на одном из популярных онлайн-форумов, решал задачи, связанные с веб-технологиями, а также выполял роль модератора, обеспечивая высокое качество обсуждений и поддержку как новичков, так и опытных разработчиков.
   link: 
     name: Ссылка на профиль
     href: https://www.cyberforum.ru/members/628162.html
