--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -89,7 +89,7 @@ works:
     
 additional:
   title: Соціальна активність
-  text: З 2023 року брав активну участь у спілкуванні та обміні досвідом з іншими веб-розробниками на одному з найпопулярніших інтернет-форумів для програмістів. Я регулярно вирішував різні завдання з веб-розробки, пов'язані з html, css, javascript та іншими технологіями, а також консультував і підтримував як початківців, так і досвідчених колег за професією. Крім того, я виконував функції модератора на цьому форумі, стежачи за дотриманням правил, порядку і якості обговорень.
+  text: З 2019 року брав активну участь у професійному співтоваристві веб-розробників на одному з популярних онлайн-форумів, розв'язував завдання, пов'язані з веб-технологіями, а також виконував роль модератора, забезпечуючи високу якість обговорень і підтримку як новачків, так і досвідчених розробників.
   link: 
     name: Посилання на профіль
     href: https://www.cyberforum.ru/members/628162.html
