--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -59,14 +59,13 @@ works:
   title: Work experience
   list:
     - name: FREELANCE
-      position: Frontend developer
-      years: 2023-2024
+      position: Web developer
+      years: 2022-2024
       additionals:
-        - Create lendings, corporate websites and other web solutions for businesses in a freelance web development team.
-        - Support, further development and problem solving in existing projects.
+        - Working with regular clients. Development of full-stack solutions for small businesses.
       skills:
         title: 'Technologies used:'
-        list: [HTML/CSS/JS, Gulp, SASS, WordPress, Python, Django]
+        list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]
     - name: DIGITAL–AGENCY ONLY
       position: Frontend developer
       years: 2020-2022
@@ -82,10 +81,11 @@ works:
       position: Frontend developer
       years: 2017-2020
       additionals:
-        - Working with regular clients. Development of full-stack solutions for small businesses.
+        - Create lendings, corporate websites and other web solutions for businesses in a freelance web development team.
+        - Support, further development and problem solving in existing projects.
       skills:
         title: 'Technologies used:'
-        list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]
+        list: [HTML/CSS/JS, Gulp, SASS, WordPress, Python, Django]
     
 additional:
   title: Social activity
