accessibility, footer heart

--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -92,6 +92,7 @@ additional:
   text: Since 2019, I have been actively participating in the professional web developer community on one of the popular online forums. I addressed issues related to web technologies and also served as a moderator, ensuring high-quality discussions and providing support for both newcomers and experienced developers.
   link: 
     name: Profile link
+    tip: (might need a vpn)
     href: https://www.cyberforum.ru/members/628162.html
 
 footer:
