--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -92,6 +92,7 @@ additional:
   text: С 2019 года активно участвовал в профессиональном сообществе веб-разработчиков на одном из популярных онлайн-форумов, решал задачи, связанные с веб-технологиями, а также выполял роль модератора, обеспечивая высокое качество обсуждений и поддержку как новичков, так и опытных разработчиков.
   link: 
     name: Ссылка на профиль
+    tip: (возможо, потребуется vpn)
     href: https://www.cyberforum.ru/members/628162.html
 
 footer:
