--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -92,6 +92,7 @@ additional:
   text: З 2019 року брав активну участь у професійному співтоваристві веб-розробників на одному з популярних онлайн-форумів, розв'язував завдання, пов'язані з веб-технологіями, а також виконував роль модератора, забезпечуючи високу якість обговорень і підтримку як новачків, так і досвідчених розробників.
   link: 
     name: Посилання на профіль
+    tip: (можливо, знадобиться vpn)
     href: https://www.cyberforum.ru/members/628162.html
 
 footer:
