--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev --host",
     "start": "astro dev",
+    "check": "astro check", 
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
