optimized scripts, content

--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -73,7 +73,7 @@ works:
         - Participate in the development of interprise projects, taking into account business requirements to ensure their functionality and efficiency.
         - Support and further development of legacy projects.
         - Actively participate in meetings and discussions on project requirements. Collaborating with other team members including designers, backend developers and project managers to solve problems.
-        - Experience leading development and design as a primary frontend developer on multiple projects.
+        - Experience leading development as a front lead on multiple projects.
       skills:
         title: 'Technologies used:'
         list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
