--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -73,7 +73,7 @@ works:
         - Участие в разработке интерпрайз проектов, учитывая бизнес-требования, для обесппечения их функциональности и эффективности.
         - Поддержка и дальнейшая разработка легаси-проектов.
         - Активное участие в совещаниях и обсуждениях требований к проектам. Сотрудничество с другими членами команды, включая дизайнеров, бэкенд-разработчиков и менеджеров проектов, для решения задач.
-        - Опыт ведения разработки и проектирования в качестве основного фронтенд-разработчика на нескольких проектах.
+        - Опыт ведения разработки и проектирования в качестве ведущего фронтенд-разработчика на нескольких проектах.
       skills:
         title: 'Используемые технологии:'
         list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
