--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -82,7 +82,7 @@ works:
       years: 2017-2020
       additionals:
         - Створення лендінгів, корпоративних сайтів та інших веб-рішень для бізнесу в команді з розробки веб-проєктів на фрілансі.
-        - Підтримка, подальше розроблення та вирішення завдань в існуючих проєктахs.
+        - Підтримка, подальше розроблення та вирішення завдань в існуючих проєктах.
       skills:
         title: 'Використовувані технології:'
         list: [HTML/CSS/JS, Gulp, SASS, WordPress, Python, Django]
