--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
+  "devDependencies": {
     "@astrojs/check": "^0.7.0",
     "@fontsource-variable/inter": "^5.0.18",
-    "astro": "^4.9.2",
-    "typescript": "^5.4.5"
-  },
-  "devDependencies": {
     "@iconify-json/bxl": "^1.1.10",
     "@iconify-json/lucide": "^1.1.188",
     "@playform/compress": "^0.0.7",
@@ -24,6 +20,8 @@
     "@unocss/preset-wind": "^0.60.4",
     "@unocss/reset": "^0.60.4",
     "@unocss/transformer-variant-group": "^0.60.4",
+    "astro": "^4.9.1",
+    "typescript": "^5.4.5",
     "unocss": "^0.60.4",
     "unocss-preset-theme": "^0.12.0"
   }
